# rh_cognitv

./: .gitignore  README.md  init.container.sh  package.sh  pyproject.toml  requirements.txt  setup.py
example/: simple_agent.py  simple_agent_mock.py
rh_cognitv/: __init__.py
rh_cognitv/cognitive/: __init__.py  adapters.py  builtin_skills.py  llm.py  meta_skill.py  models.py  prompt.py  protocols.py  serializer.py  skill.py
rh_cognitv/execution_platform/: __init__.py  artifact_store.py  budget.py  context_store.py  errors.py  event_bus.py  events.py  handlers.py  log_collector.py  memory_store.py  models.py  openai_handler.py  policies.py  protocols.py  state.py  state_middleware.py  trace_collector.py  types.py
rh_cognitv/orchestrator/: __init__.py  adapters.py  dag_orchestrator.py  execution_dag.py  flow_nodes.py  models.py  nodes.py  plan_dag.py  protocols.py  validation.py
specs/: SPEC-refactor-execute-to-call.md
specs/01 - core-building/: SPEC-L1-cognitive.md  SPEC-L2-orchestrator.md  SPEC-L3-execution-platform.md  SPEC-overview.md  SPEC.md  base_prompt.txt
tests/cognitive/: test_adapters.py  test_builtin_skills.py  test_config_skill.py  test_integration.py  test_llm.py  test_meta_skill.py  test_models.py  test_prompt.py  test_protocols.py  test_serializer.py  test_skill.py
tests/execution_platform/: test_artifact_store.py  test_budget.py  test_context_store.py  test_entry_ref.py  test_errors.py  test_event_bus.py  test_events.py  test_handlers.py  test_integration.py  test_log_collector.py  test_memory_store.py  test_models.py  test_policies.py  (+5 more)
(+8 files in other folders)
